port the battery load balancing change from 1.12